--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="delete_entry_dialog_title">Delete Entry</string>
     <string name="delete_workout_dialog">Are you sure you want to delete workout?</string>
     <string name="delete_routine_dialog">Are you sure you want to delete routine?</string>
+    <string name="delete_exerciseabstract_dialog">Are you sure you want to delete exercise?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
 </resources>
