--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">Training Manager</string>
     <string name="delete_entry_dialog_title">Delete Entry</string>
+    <string name="add_entry_dialog_title">Add Entry</string>
     <string name="delete_workout_dialog">Are you sure you want to delete workout?</string>
     <string name="delete_routine_dialog">Are you sure you want to delete routine?</string>
+    <string name="add_exercise_dialog">Are you sure you want to add exercise to workout?</string>
     <string name="delete_exerciseabstract_dialog">Are you sure you want to delete exercise?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
