Quick save  -fucking all up  -im no programer  -lets do things right this time  -change logic where Routine contains Workouts and Workout contains Exercises   and etc...
Signed-off-by: Tamir Mishali <Tamirmishali@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="delete_routine_dialog">Are you sure you want to delete routine?</string>
     <string name="add_exercise_dialog">Are you sure you want to add exercise to workout?</string>
     <string name="delete_exerciseabstract_dialog">Are you sure you want to delete exercise?</string>
+    <string name="delete_set_dialog">Are you sure you want to delete current set?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
 </resources>
