Finished "Workout now" button - added edit/new images - arranged the visibility of textviews and imageview - Resource strings correction
Signed-off-by: Tamir Mishali <tamirmishali@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="delete_set_dialog">Are you sure you want to delete current set?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="const_continue_current_workout">Continue workout:</string>
+    <string name="const_Start_new_workout_now">"Start new workout now!</string>
 </resources>
